--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,9 +12,15 @@
 	"customizations": {
 		// Configure properties specific to VS Code.
 		"vscode": {
-			"settings": {},
+			"settings": {
+				"python.defaultInterpreterPath": "/usr/local/bin/python",
+				"jupyter.jupyterServerType": "local"
+			},
 			"extensions": [
-				"streetsidesoftware.code-spell-checker"
+				"streetsidesoftware.code-spell-checker",
+				"ms-toolsai.jupyter",
+				"ms-python.python",
+				"ms-toolsai.datawrangler"
 			]
 		}
 	},
@@ -32,8 +38,8 @@
 	},
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r requirements.txt"
-
+	"postCreateCommand": "pip3 install -r requirements.txt && pip install --upgrade pip && pip install notebook ipykernel"
+	
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
